--- a/.gitignore
+++ b/.gitignore
@@ -101,8 +101,7 @@ celerybeat.pid
 # SageMath parsed files
 *.sage.py
 
-# Environments
-.idea/
+# Environment
 .env
 .venv
 env/
@@ -110,6 +109,30 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+
+#User's personal stuffs
+.idea/workspace.xml
+.idea/tasks.xml
+.idea/dictionaries
+.idea/vcs.xml
+.idea/jsLibraryMappings.xml
+
+# Sensitive or high-churn files:
+.idea/dataSources.ids
+.idea/dataSources.xml
+.idea/dataSources.local.xml
+.idea/sqlDataSources.xml
+.idea/dynamic.xml
+.idea/uiDesigner.xml
+
+# Gradle:
+.idea/gradle.xml
+.idea/libraries
+
+# Mongo Explorer plugin:
+.idea/mongoSettings.xml
+
+.idea/
 
 # Spyder project settings
 .spyderproject
